feat: add static universe data pipeline