@@ -4,8 +4,17 @@ plugins {
 
 dependencies {
     implementation(project(":core"))
+    implementation(libs.sqlite.jdbc)
+
+    testImplementation(kotlin("test"))
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 kotlin {
     jvmToolchain(25)
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
